--- a/_courses_collection/c1.md
+++ b/_courses_collection/c1.md
@@ -1,5 +1,27 @@
 ---
 id: course1
-name: B Web Accessibility Compliance
+name: Web Accessibility Compliance
 provider: Provider J76
+description: In this course, you will learn about the standards in place to guide developers in creating a web that is accessible to all users as well as techniques to help bring your projects up to those standards.
+type: Training
+prerequisites: None
+audience: Developer, Designer, Tester, Other
+level: Basic
+curricula_correspondence: Foundations Modules
+curricula_link: https://www.w3.org/WAI/curricula/foundation-modules/
+topics: Development Tools
+language: en
+country: us
+format: Online
+activities: Scheduled
+accessibility_support: 
+platform: Not provided
+cost: Paid
+duration: 2 weeks
+availability_start_date: 01 September 2020
+availability_end_date: 30 June 2021
+course_link: www.link.com
+course_link_reviews: www.link.com/reviews
+course_info_last_update: 08 September 2021
+course_content_last_update: 01 August 2021
 ---
