--- a/_courses_collection/c2.md
+++ b/_courses_collection/c2.md
@@ -1,5 +1,27 @@
 ---
 id: course2
-name: A Web Accessibility Compliance
-provider: Provider J76
+name: Web Accessibility
+provider: Provider U65
+description: In this course, you will get hands-on experience making web applications accessible.
+type: Training
+prerequisites: HTML, CSS, Javascript
+audience: Developer, Tester
+level: Advanced
+curricula_correspondence: Developer Modules
+curricula_link: https://www.w3.org/WAI/curricula/developer-modules/
+topics: Accessible Web Applications
+language: en
+country: us
+format: Online
+activities: Scheduled
+accessibility_support: 
+platform: Udacity
+cost: Free
+duration: 6 weeks
+availability_start_date: 01 September 2020
+availability_end_date: 30 June 2021
+course_link: www.link.com
+course_link_reviews: www.link.com/reviews
+course_info_last_update: 08 September 2021
+course_content_last_update: 01 August 2021
 ---
