--- a/_courses_collection/c2.md
+++ b/_courses_collection/c2.md
@@ -14,7 +14,7 @@ language: en
 country: us
 format: Online
 activities: Scheduled
-accessibility_support: 
+accessibility_support: Not provided
 platform: Udacity
 cost: Free
 duration: 6 weeks
