--- a/_courses_collection/c1.md
+++ b/_courses_collection/c1.md
@@ -14,7 +14,7 @@ language: en
 country: us
 format: Online
 activities: Scheduled
-accessibility_support: 
+accessibility_support: Not provided
 platform: Not provided
 cost: Paid
 duration: 2 weeks
